--- a/README
+++ b/README
@@ -14,11 +14,11 @@ See the file COPYING for more information.
 
 Description:
 
-Yaepghd is a compelte rewrite of the original yaepg plugin.  The
+Yaepghd is a complete rewrite of the original yaepg plugin.  The
 original yaepg plugin was designed for FF cards and only used 4
 colors due to limitations on the amount of OSD memory on FF cards.
 Yaepghd requires output devices with an OSD capable of high color
-full screen grpahics (e.g. eHD or xine) and will _not_ work with FF
+full screen graphics (e.g. eHD or xine) and will _not_ work with FF
 cards (unless you have the 4MB mod).
 
 In the original yaepg the layout and sizes of all the components
@@ -41,21 +41,35 @@ compatible with the GPL.  From the font's license:
          font on an item or project that will be sold, please send
          me an email first."
 
+
 Keys:
+
 Guide
-Up/Down        - Move the cursor up/down in the grid.
-Left/Right     - Move the cursor left/right in the grid.
-Chan Up/Down   - Page up/down within the grid.
-Ok             - Tune to the selected channel and exit the plugin.
-Green          - Scroll +12 hours in the grid.
-Red            - Scroll -12 hours in the grid.
-Blue           - Take a screenshot.
-Yellow         - Tune to the selected channel.
-Back/Exit      - Exit the plugin.
-0-9            - Perform direct channel change.
+Up/Down         - Move the cursor up/down in the grid.
+Left/Right      - Move the cursor left/right in the grid.
+Ok              - Tune to the selected channel and exit the plugin.
+Red             - Take a screenshot (yaepghd.jpg).
+Green/Yellow    - Page up/down within the grid.
+Blue            - Switch to the selected channel.
+FastRew/FastFwd - Scroll -12/+12 hours in the grid.
+Back/Exit       - Exit the plugin.
+0-9             - Perform direct channel change.
 
 Record Dialog
-Up/Down        - Move the cursor between input boxes.
-Left/Right     - Modify input box values.
-Ok             - Add timer.
-Back/Exit      - Cancel timer.
+Up/Down         - Move the cursor between input boxes.
+Left/Right      - Modify input box values.
+Ok              - Add timer.
+Back/Exit       - Cancel timer.
+
+
+Installation:
+
+cd /put/your/path/here/VDR/PLUGINS/src
+tar -xzf /put/your/path/here/vdr-yaepghd-X.Y.Z.tgz
+ln -s yaepghd-X.Y.Z yaepghd
+cd /put/your/path/here/VDR
+patch -p1 < PLUGINS/src/yaepghd/patches/vdr-X.Y.Z-yaepghd.patch
+cp -R PLUGINS/src/yaepghd/yaepghd /path/to/vdrconf/plugins/
+make
+make plugins
+./vdr -P yaepghd
