--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yaepghd 0.0.1\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2009-01-29 21:00+0200\n"
+"POT-Creation-Date: 2009-01-30 20:42+0200\n"
 "PO-Revision-Date: 2009-01-28 10:51+0200\n"
 "Last-Translator: Rolf Ahrenberg <rahrenbe@cc.hut.fi>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -75,13 +75,13 @@ msgstr "Piilota valinta päävalikosta"
 msgid "Replace original schedule"
 msgstr "Korvaa alkuperäinen ohjelmaopas"
 
-msgid "Channel Change"
+msgid "Channel change"
 msgstr "Kanavanvaihto"
 
 msgid "Time format"
 msgstr "Kellonajan esitysmuoto"
 
-msgid "Channel Order"
+msgid "Channel order"
 msgstr "Kanavajärjetys"
 
 msgid "Yet another EPG in HD"
