--- a/README
+++ b/README
@@ -33,15 +33,6 @@ font directories or by adding the yaepghd theme directory to your
 font path.  After this is done you must run fc-cache for the new
 font to be available.
 
-NOTE: The default theme contains a font whose license is not
-compatible with the GPL.  From the font's license:
-
-        "Tepid Monkey Fonts typefaces may be used for free in work
-         that will not generate a profit. If you intend to use the
-         font on an item or project that will be sold, please send
-         me an email first."
-
-
 Keys:
 
 Guide
@@ -73,3 +64,16 @@ cp -R PLUGINS/src/yaepghd/yaepghd /path/to/vdrconf/plugins/
 make
 make plugins
 ./vdr -P yaepghd
+
+Notes:
+
+- Video window doesn't scale back to normal when quiting the plugin
+  with FF cards.
+
+- The default theme contains a font whose license is not compatible
+  with the GPL.  From the font's license:
+
+  "Tepid Monkey Fonts typefaces may be used for free in work
+   that will not generate a profit. If you intend to use the
+   font on an item or project that will be sold, please send
+   me an email first."
