--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yaepghd 0.0.1\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2009-01-29 21:00+0200\n"
+"POT-Creation-Date: 2009-01-30 20:42+0200\n"
 "PO-Revision-Date: 2009-01-28 10:51+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -74,13 +74,13 @@ msgstr "Hauptmenüeintrag verstecken"
 msgid "Replace original schedule"
 msgstr ""
 
-msgid "Channel Change"
+msgid "Channel change"
 msgstr ""
 
 msgid "Time format"
 msgstr "Zeit-Format"
 
-msgid "Channel Order"
+msgid "Channel order"
 msgstr ""
 
 msgid "Yet another EPG in HD"
