--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 This is a "plugin" for the Video Disk Recorder (VDR).
 
-Written by:                  bball <bball950@yahoo.com>
+Written by:                  bball <bball950@yahoo.com>, Community Edition
 
-Project's homepage:          http://projects.vdr-developer.org/projects/show/plg-yaepghd
+Project's homepage:          http://projects.vdr-developer.org/projects/show/plg-yaepghd (original)
 
 Latest version available at: URL
 
@@ -39,9 +39,12 @@ Guide
 Up/Down         - Move the cursor up/down in the grid.
 Left/Right      - Move the cursor left/right in the grid.
 Ok              - Tune to the selected channel and exit the plugin.
-Red             - Take a screenshot (yaepghd.jpg).
+                  Record dialog.
+Red             - Add timer / delete timer.
+                  Record dialog.
 Green/Yellow    - Page up/down within the grid.
 Blue            - Switch to the selected channel.
+                  Switch timer.
 FastRew/FastFwd - Scroll -12/+12 hours in the grid.
 Back/Exit       - Exit the plugin.
 0-9             - Perform direct channel change.
@@ -59,21 +62,32 @@ cd /put/your/path/here/VDR/PLUGINS/src
 tar -xzf /put/your/path/here/vdr-yaepghd-X.Y.Z.tgz
 ln -s yaepghd-X.Y.Z yaepghd
 cd /put/your/path/here/VDR
-patch -p1 < PLUGINS/src/yaepghd/patches/vdr-X.Y.Z-yaepghd.patch
+patch -p1 < PLUGINS/src/yaepghd/patches/vdr-X.Y.Z-yaepghd.patch # Optional
+
+cp PLUGINS/src/yaepghd/patches/make.global ./  # only for vdr < 1.7.13
+
 cp -R PLUGINS/src/yaepghd/yaepghd /path/to/vdrconf/plugins/
 make
 make plugins
-./vdr -P yaepghd
+./vdr -P yaepghd 
+
+Options:
+
+  -i path, --epgimages=path
+      Path to the epgimages (Default: /video/epgimages).
 
 Notes:
+- This README has to be updated !
+
+- Yaepghd patch provides an optional VDR API modications for scaling
+  video window. The video stays untouched without the patch.
 
 - Video window doesn't scale back to normal when quiting the plugin
   with FF cards.
 
-- The default theme contains a font whose license is not compatible
-  with the GPL.  From the font's license:
+- Yaepghd may need a few seconds to set a switch timer, as it has to wait for
+  the EPGSearch plugin.
 
-  "Tepid Monkey Fonts typefaces may be used for free in work
-   that will not generate a profit. If you intend to use the
-   font on an item or project that will be sold, please send
-   me an email first."
+- The colors of the epg images may be distorted if AntiAliasing is enabled in vdr osd setup.
+
+  
