--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yaepghd 0.0.1\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2009-01-30 20:42+0200\n"
+"POT-Creation-Date: 2010-11-20 18:16+0100\n"
 "PO-Revision-Date: 2009-01-28 10:51+0200\n"
 "Last-Translator: Rolf Ahrenberg <rahrenbe@cc.hut.fi>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -18,26 +18,11 @@ msgstr ""
 msgid "No Info"
 msgstr "Ei tietoja"
 
-msgid "Screenshot"
-msgstr "Ota kuva"
-
 msgid "Page up"
 msgstr "Sivu ylös"
 
 msgid "Page down"
 msgstr "Sivu alas"
-
-msgid "Once"
-msgstr "kerran"
-
-msgid "Every day"
-msgstr "joka päivä"
-
-msgid "Mon-Fri"
-msgstr "ma-pe"
-
-msgid "Sun-Sat"
-msgstr "ma-su"
 
 msgid "Start"
 msgstr "Aloitus"
@@ -45,8 +30,26 @@ msgstr "Aloitus"
 msgid "Stop"
 msgstr "Lopetus"
 
-msgid "Frequency"
-msgstr "Toistuva"
+msgid "Switch timer added"
+msgstr ""
+
+msgid "Switch timer deleted"
+msgstr ""
+
+msgid "Timer added"
+msgstr ""
+
+msgid "Failed to add timer"
+msgstr ""
+
+msgid "Remote timer deactivated"
+msgstr ""
+
+msgid "Timer deactivated"
+msgstr ""
+
+msgid "YaepgHD"
+msgstr "Ohjelmaopas (YaepgHD)"
 
 msgid "24h"
 msgstr "24h"
@@ -60,32 +63,79 @@ msgstr "nouseva"
 msgid "Down"
 msgstr "laskeva"
 
-msgid "Manual"
-msgstr "manuaalinen"
+#, fuzzy
+msgid "Close YaepgHD"
+msgstr "Ohjelmaopas (YaepgHD)"
 
-msgid "Semi-automatic"
-msgstr "puoliautomaattinen"
+msgid "Leave YaepgHD open"
+msgstr ""
 
 msgid "Automatic"
 msgstr "automaattinen"
 
+msgid "pixel algo"
+msgstr ""
+
+msgid "ratio algo"
+msgstr ""
+
+msgid "zoom image"
+msgstr ""
+
 msgid "Hide mainmenu entry"
 msgstr "Piilota valinta päävalikosta"
 
+msgid "Main menu entry"
+msgstr "Päävalikko merkintä"
+
 msgid "Replace original schedule"
-msgstr "Korvaa alkuperäinen ohjelmaopas"
+msgstr ""
 
 msgid "Channel change"
 msgstr "Kanavanvaihto"
+
+msgid "Switch channel with OK"
+msgstr ""
+
+msgid "Record dialog with red button"
+msgstr ""
 
 msgid "Time format"
 msgstr "Kellonajan esitysmuoto"
 
 msgid "Channel order"
-msgstr "Kanavajärjetys"
+msgstr "Kanavajärjestys"
+
+msgid "Channel number"
+msgstr "Kanavanumero"
+
+msgid "Info symbols"
+msgstr ""
+
+msgid "EPG images"
+msgstr ""
+
+msgid "  Resize images"
+msgstr ""
+
+#, fuzzy
+msgid "  Image format"
+msgstr "Kellonajan esitysmuoto"
+
+msgid "Switch timer"
+msgstr ""
+
+msgid "  Switch ... minutes before start"
+msgstr ""
+
+msgid "Remote timer"
+msgstr ""
 
 msgid "Yet another EPG in HD"
 msgstr "Vaihtoehtoinen ohjelmaopas"
 
-msgid "YaepgHD"
-msgstr "Ohjelmaopas (YaepgHD)"
+#~ msgid "Manual"
+#~ msgstr "manuaalinen"
+
+#~ msgid "Semi-automatic"
+#~ msgstr "puoliautomaattinen"
