--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -6,10 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yaepghd 0.0.1\n"
 "Report-Msgid-Bugs-To: <see README>\n"
-"POT-Creation-Date: 2010-11-20 18:16+0100\n"
+"POT-Creation-Date: 2013-03-18 00:04+0100\n"
 "PO-Revision-Date: 2009-02-08 23:04+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
 "Language-Team:  <vdr@linuxtv.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
