'pre'-date version bump, added romanian translation, updated german translation

--- a/HISTORY
+++ b/HISTORY
@@ -12,6 +12,7 @@ VDR Plugin 'yaepghd' Revision History
 - integrated extra plugin themes found in the community edition thread
   at vdr-portal.de
 - updated anthra_1280 theme with the one from pc_medusa at vdr-portal.de
+- added romanian translation
 
 2010-10-24: Version 0.0.3 Community Edition
 
