navigate back to main menu with BACK, adapted Saman's patch from vdr-portal.de

--- a/HISTORY
+++ b/HISTORY
@@ -6,13 +6,15 @@ VDR Plugin 'yaepghd' Revision History
 - at least for now, this version is no longer hosted at vdr-developer.org
   as the old project (after ver. 0.0.1) still seems to be abandoned, check
   the README file for the links
-- switched to ScaleVideo API introduced with vdr-1.7.33 and dropped
-  old patch
+- switched to ScaleVideo API introduced with vdr-1.7.33 and dropped old patch
 - switched MAkefile to new style introduced with vdr-1.7.34
 - integrated extra plugin themes found in the community edition thread
   at vdr-portal.de
-- updated anthra_1280 theme with the one from pc_medusa at vdr-portal.de
+- updated anthra_1280 theme with the one from "pc_medusa" at vdr-portal.de
 - added romanian translation
+- added nOpacity_1920_darkblue theme contributed by "Saman" at vdr-portal.de
+- added setup option to simulate returning back to the menu position where
+  yaepghd was entered from, adapted from a patch contributed by "Saman" at vdr-portal.de
 
 2010-10-24: Version 0.0.3 Community Edition
 
