--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 This is a "plugin" for the Video Disk Recorder (VDR).
 
 Written by:                  bball <bball950@yahoo.com>, Community Edition (various contributors from the vdr-portal.de, check HISTORY)
-Forked ('cause abandoned)    by Lucian Muresan
+Forked ('cause abandoned)    by Lucian Muresan <lucianm AT users DOT sourceforge DOT net>
 
 Project homepage:            http://projects.vdr-developer.org/projects/show/plg-yaepghd (original, outdated)
 Project wiki page (en):      http://linuxtv.org/vdrwiki/index.php/Yaepghd-plugin/
