--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Written by:                  bball <bball950@yahoo.com>, Community Edition (vari
 Forked ('cause abandoned)    by Lucian Muresan <lucianm AT users DOT sourceforge DOT net>
 
 Project homepage:            http://projects.vdr-developer.org/projects/show/plg-yaepghd (original, outdated)
-Project wiki page (en):      http://linuxtv.org/vdrwiki/index.php/Yaepghd-plugin/
+Project wiki page (en):      http://linuxtv.org/vdrwiki/index.php/Yaepghd-plugin
 Project wiki page (de):      http://www.vdr-wiki.de/wiki/index.php/Yaepghd-plugin
 Project repository:          https://github.com/lucianm/vdr-plugin-yaepghd
 Project releases:            http://sourceforge.net/projects/vdryaepghd/files
@@ -86,6 +86,11 @@ Notes:
 
 - Yaepghd patch is no longer supported, as now the ScaleVideo API introduced with
   vdr-1.7.33 is used.
+
+- Leaving the plugin with 'Back' can be configured to simulate returning to the
+  menu position the plugin was entered from (also with two levels of menues, like
+  when using for example menuorg). This is achieved by simulating remote keypresses
+  and configuring the position(s) in the menu where the selection should be.
 
 - Video window doesn't scale back to normal when quiting the plugin
   with FF cards.
